# srisk-case

./: .env.example  .gitignore  Makefile  PLAN.md  README.md
.githooks/: pre-commit
.github/workflows/: deploy.yml  guard.yml  pipeline-tests.yml
pipeline/: pyproject.toml
pipeline/betflow/: aggregate.py  config.py  dedup.py  findings.py  ingest.py  normalize.py  phases.py  qa.py  report.py  risk.py  run.py  slips.py
pipeline/tests/: conftest.py  test_dedup.py  test_normalize.py  test_phases.py  test_risk.py  test_slips.py
report/: template.html
scripts/: consistency.mjs  encrypt.mjs  guard.sh
site/: index.html  package-lock.json  package.json  vite.config.ts
site/public/payload/: data.enc  report.pdf.enc  sentinel.enc
site/src/: App.tsx  dash.css  main.tsx  shell.css
site/src/components/: BreakdownBar.tsx  EChart.tsx  ErrorBoundary.tsx  FilterBar.tsx  Kpis.tsx  Layout.tsx  MultiSelect.tsx
site/src/gate/: Gate.tsx  gate.css
site/src/lib/: artifacts.ts  concentration.ts  crypto.ts  format.ts  payload.ts  series.ts  session.ts  store.ts  viz.ts
site/src/state/: AppContext.tsx
site/src/styles/: global.css
site/src/views/: Concentration.tsx  Findings.tsx  Flow.tsx  Overview.tsx  Risk.tsx
